# Diplom

./: .gitignore  README.md  docker-compose.yaml  gui.code-workspace  med-voice-installer.iss
.github/workflows/: main.yml
backend/: MedVoice-Server-CLI.spec  cli.spec  config.env  pyproject.toml  server.spec
backend/src/: config.json
backend/src/backend/: __init__.py  cli.py  config.py
backend/src/backend/core/: __init__.py  asgi.py  db.py  exceptions.py  mdns.py
backend/src/backend/models/: __init__.py  med_records.py  users.py
backend/src/backend/repositories/: base.py  departments.py  doctors.py  patients.py  rbac.py  records.py  transcriptions.py
backend/src/backend/routes/: __init__.py
backend/src/backend/routes/v1/: __init__.py  auth.py  departments.py  doctors.py  files.py  patitents.py  rbac.py  records.py
backend/src/backend/schemas/: __init__.py  auth.py  base.py  departments.py  filters.py  rbac.py  records.py  transcriptions.py  users.py
backend/src/backend/services/: auth.py  base.py  departments.py  doctors.py  files.py  patients.py  rbac.py  records.py
backend/src/backend/utils/: permission_helper.py
backend/src/backend/utils/cbv/: __init__.py  route.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 3b6dc1af52a9_init.py  6d2d1df2d168_fix_datetime.py  7cf0be8e4be9_rbac.py  848f1b10ba35_add_is_processed_field.py  a54476c6ac1e_default_rbac.py  adaa3ad79afa_add_created_at.py  ae8d6449574b_init.py  c145b4682e1e_remove_default.py  c4a3227bf103_fix_datetime.py  eb17085fbdf5_init_tables.py
backend/tests/: conftest.py  test_base_repository.py  test_controller.py
backend/tests/routes/: test_auth_router.py
backend/tests/services/: test_auth_service.py  test_base_service.py
gui/: .gitignore  nuxt.config.ts  package.json
gui/src/: openapi.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  mdns.rs  model_downloader.rs  transcription.rs
gui/src/assets/: RobotoBase64.ts  main.css  openapi.json
gui/src/components/: DateTimePicker.vue  (+2 more)
(+111 files in other folders)
