[package]
name = "med-voice"
version = "1.0.1"
description = "MedVoice Tauri"
authors = ["Chaliuk Vladyslav"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
whisper-rs = "0.14.2"
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "stream"] }
futures-util = "0.3.28"
dirs-next = "2"
include_dir = "0.7"
ollama-rs = {version = "0.3.0", features= ["stream"] }
tokio-stream = "0.1.17"
mdns-sd = "0.13.6"
